--- a/rapport.qmd
+++ b/rapport.qmd
@@ -7,24 +7,19 @@ editor_options:
 chunk_output_type: console
 ---
 
-
 ## Oppgave 1: Reliability and tools for reproducible data science
-
 
 ## Introduksjon
 
 I vår studie har vi gjennomført VO2 max-tester over fire forskjellige dager for å vurdere påliteligheten av de innsamlede dataene. Formålet med disse testene var å undersøke hvor konsistente resultatene er under kontrollerte forhold. For å oppnå dette har vi forsøkt å standardisere flere variabler, inkludert treningsnivå og matinntak dagen før testene. Ifølge @halperin2015 er det avgjørende å bruke standardiserte protokoller for å oppnå pålitelige resultater i fysiologiske tester. I tillegg har vi målt laktatnivåer umiddelbart etter avslutningen av hver test for å vurdere den fysiologiske responsen. Tidligere forskning har vist at laktatnivåer kan gi verdifull informasjon om anaerob kapasitet og treningsintensitet, noe som er viktig for å forstå atletisk ytelse (@hopkins2000; @tanner2012). Ved å kontrollere for disse variablene håper vi å oppnå en høy grad av reproduserbarhet i våre resultater.
 
-
-
+I denne rapporten velger vi å fokusere på lakta-max og RER. Vi vil sammenlikne disse, regne ut standard avvik.
 
 ## Protokoll
 
-skriv noe 
+skriv noe
 
 ## Resultater
-
-## mye teknisk feil, fikk ikke til å fungere, brukt AI til å hjelpe
 
 ```{r}
 # Last inn nødvendige biblioteker
@@ -71,7 +66,72 @@ read_excel("data/g4.xlsx") %>%
 
 ```
 
-### Pivoting and calculating typical error
+Tabell over deltakere
+
+```{r}
+dat %>%
+  select(group, age, height, weight, timepoint) %>%
+  filter(timepoint == "pre") %>%
+  summarise(.by = c(group),
+            m.age = mean(age, na.rm = TRUE),
+            sd.age = sd(age, na.rm = TRUE),
+            m.height = mean(height, na.rm = TRUE),
+            sd.height = sd(height, na.rm = TRUE),
+            m.weight = mean(weight, na.rm = TRUE),
+            sd.weight = sd(weight, na.rm = TRUE))
+  print()
+```
+
+
+variasjon eller reliabilitetstallet til den la.max, så den rer.max. sammenlikne til slutt
+
+### Standard avvik:
+**laktat**
+
+```{r}
+
+dat %>%
+        summarise(.by = c(timepoint, group), 
+                  m = mean(la.max, na.rm = TRUE), 
+                  s = sd(la.max, na.rm = TRUE))
+
+
+```
+
+**RER**
+```{r}
+
+dat %>%
+        summarise(.by = c(timepoint, group), 
+                  m = mean(rer.max, na.rm = TRUE), 
+                  s = sd(rer.max, na.rm = TRUE))
+
+
+```
+
+
+**Graf over laktatmålingene**
+
+```{r}
+#| code-fold: true
+#| message: false
+#| warning: false
+
+
+ggplot(data = dat,
+       aes(y = la.max,
+           x = timepoint,
+           group = id)) +
+  
+  geom_point() +
+  
+  geom_line() + 
+  
+  labs(y = "laktate max (mmol)",
+       x = "tidspunkt (testnummer)")
+
+
+```
 
 
 
@@ -81,7 +141,7 @@ read_excel("data/g4.xlsx") %>%
 
 **Livsstil**
 
-I forkant av perioden ble vi enig om å forsøke å standardisere trening og matinntak i forkant av testene. Dette visste vi med en gang kunne bli utfordrende ettersom deltakerne har egne treningsopplegg som de følger. Noen på gruppa hadde for eksempel forskjellige treningsbolker fra t1 og t2 til t3 og t4. I tillegg til dette  var t1 og t2 satt opp to dager etter hverandre, mens det var en hviledag mellom t3 og t4. Id1 gjennomførte også en test mandagen før t1, så i den første testuken ble id1 testet tre ganger.
+I forkant av perioden ble vi enig om å forsøke å standardisere trening og matinntak i forkant av testene. Dette visste vi med en gang kunne bli utfordrende ettersom deltakerne har egne treningsopplegg som de følger. Noen på gruppa hadde for eksempel forskjellige treningsbolker fra t1 og t2 til t3 og t4. I tillegg til dette var t1 og t2 satt opp to dager etter hverandre, mens det var en hviledag mellom t3 og t4. Id1 gjennomførte også en test mandagen før t1, så i den første testuken ble id1 testet tre ganger.
 
 Mat og drikke i forkant av testen var også vanskelig å standardisere da deltakerne også måtte ta hensyn til andre familimedlemmer ol. Underveis i testen var ikke dette en utfordring ettersom testen var så kort var det ikke nødvendig med inntak av mat eller drikke underveis.
 
@@ -89,18 +149,17 @@ Selv om vi ønsket å standardisere søvn så vi at dette ville være vanskelig 
 
 Dagsform vil også påvirke resultatene våre. Travle dager og uvant livsstil i forkant av testen kan påvirke resultatet selv om trening, mat og drikke er standardisert. Dagsform vil også påvirke utøverens evne til å presse seg.
 
-**Temperatur og luftfuktighet^**
+**Temperatur og luftfuktighet\^**
 
-Alle testene vi på gruppe 1 utførte var på det samme laboratoriumet - Laboratorium 2. Her finnes det flere tiltak som skal sikre at temperaturen og luftfuktigheten er relativ lik hele tiden, som klimaanlegg og luftfukter. Likevel ble det noe variasjon i temperatur og luftfuktighet. temperaturen varierte fra nn-nn grader, og luftfuktigheten varierte fra nn-nn %.Det skal nevnes at luftfuktigheten var ganske stabil på t1-t3, og at det var på t4 at luftfuktigheten var veldig lav. 
+Alle testene vi på gruppe 1 utførte var på det samme laboratoriumet - Laboratorium 2. Her finnes det flere tiltak som skal sikre at temperaturen og luftfuktigheten er relativ lik hele tiden, som klimaanlegg og luftfukter. Likevel ble det noe variasjon i temperatur og luftfuktighet. temperaturen varierte fra nn-nn grader, og luftfuktigheten varierte fra nn-nn %.Det skal nevnes at luftfuktigheten var ganske stabil på t1-t3, og at det var på t4 at luftfuktigheten var veldig lav.
 
 **tidspunkt**
 
-Tidspunkt skulle være standardisert. Vi skulle ha laboratoriumet fra kl 09:15-12:00 på alle testene, og vi fulgte samme rekkefølge hver gang. Det oppstod likevel noen problemer. På t3 var laboratoriumet dobbeltbooket så det ble kortere tid til å gjennomføre testene, som førte til noe stress. På t4 var laboratoriumet også dobbeltbooket så testen ble utsatt til kl 13.00. Også her hadde vi fått mindre tid enn det som først var oppsatt, men klarte å gjennomføre alle testene med god margin. 
+Tidspunkt skulle være standardisert. Vi skulle ha laboratoriumet fra kl 09:15-12:00 på alle testene, og vi fulgte samme rekkefølge hver gang. Det oppstod likevel noen problemer. På t3 var laboratoriumet dobbeltbooket så det ble kortere tid til å gjennomføre testene, som førte til noe stress. På t4 var laboratoriumet også dobbeltbooket så testen ble utsatt til kl 13.00. Også her hadde vi fått mindre tid enn det som først var oppsatt, men klarte å gjennomføre alle testene med god margin.
 
 Vi klarta altså bare å standardisere tidspunkt skikkelig på t1 og t2. Resultatene på t3 og t4 kan derfor bli noe påvirket av dette.
 
-
-**Unøyaktiget i framgangsmåte**. 
+**Unøyaktiget i framgangsmåte**.
 
 Vi har laget et protokoll med framgangsmåte, og har forsøkt å følge den hver gang. Likevel vil det alltid skje unntak og menneskelige feil som kan påvirke reslutatet.
 
@@ -114,10 +173,6 @@ På t4 manglet det også stoppeklokke på laboratoriumet. Vi løste dette med å
 
 **Andre grupper**
 
-I denne rapporten har vi også brukt data fra de andre gruppene i klassen vår. Dette gjør at vi har et bredere datautvalg som vi kan benytte oss av. Problemet med dette er at vi ikke har kontroll på andre gruppers protokoll, avvik, nøyaktighet osv.
-
+I denne rapporten har vi også brukt data fra de andre gruppene i klassen vår. Dette gjør at vi har et bredere datautvalg som vi kan benytte oss av. Problemet med dette er at vi ikke har kontroll på andre gruppers protokoll, avvik, nøyaktighet osv. I datasettet var det for eksempel en plottefeil mellom rer.max og ve.max som vi ikke fikk endret på. Dette førte igjen til en feil i utregning av standard avvik, og at en eventuell tabell ikke ble brukbar.
 
 ## Referanseliste
-
-
-
