--- a/rapport.qmd
+++ b/rapport.qmd
@@ -39,103 +39,73 @@ Da en tydelig protokoll ble fulgt for å etterstrebe så sikre og reliable teste
 
 ### Før test:
 
-Starte laktatmaskin
-
-Bytte standard hvis den er tom (finnes i kjøleskap)
-
-Finne frem munnstykke og sette sammen dette
-
-Husk hansker
-
-Papir med neseklype rundt når den er klar
-
-Ta med ny slange som festes i miksekammer
-
-Skru på Lode-sykkel.
-
-Skru på Vyntus og Lode PC
+1.  Starte laktatmaskin
+2.  Bytte standard hvis den er tom (finnes i kjøleskap)
+3.  Finne frem munnstykke og sette sammen dette
+4.  Husk hansker
+5.  Papir med neseklype rundt når den er klar
+6.  Ta med ny slange som festes i miksekammer
+7.  Skru på Lode-sykkel.
+8.  Skru på Vyntus og Lode PC
 
 **Kalibrere oksygenanalysator**
 
-Gasskalibrering
-
-Åpne gassflaske (lukkes når kalibrering er ferdig)
-
-Sjekke at sensor er koblet i maskinen
-
-Start kalibrering
-
-Godtar 2% feilmargin, hvis den er høyere må man rekalibrere
-
-Volumkalibrering-
-
-Feilmargin på 0,2% eller under godtas
-
-Kalibrere kammer
-
-Flytte sensor til kammer
-
-Skru av gass
+1.  Gasskalibrering
+2.  Åpne gassflaske (lukkes når kalibrering er ferdig)
+3.  Sjekke at sensor er koblet i maskinen
+4.  Start kalibrering
+5.  Godtar 2% feilmargin, hvis den er høyere må man rekalibrere
+6.  Volumkalibrering-
+7.  Feilmargin på 0,2% eller under godtas
+8.  Kalibrere kammer
+9.  Flytte sensor til kammer
+10. Skru av gass
 
 **Forberede utstyr**
 
-Lage ny pasient på Vyntus og Lode
+1.  Lage ny pasient på Vyntus og Lode
 
-Idr4000_h24_g1_idx
+2.  Idr4000_h24_g1_idx
 
-Veie personen i så lite klær som mulig (trekke fra 300g for klær)
+3.  Veie personen i så lite klær som mulig (trekke fra 300g for klær)
 
-Lage plotteark
+4.  Lage plotteark
 
-Stille inn krankarm (172,5) og kalibrere sykkel på Lode PC
+5.  Stille inn krankarm (172,5) og kalibrere sykkel på Lode PC
 
-Stille inn sykkel til deltaker
+6.  Stille inn sykkel til deltaker
 
-Fullføre plotteark
+7.  Fullføre plotteark
 
-Klargjøre laktatrør, papir og teip, samt teip til neseklype
+8.  Klargjøre laktatrør, papir og teip, samt teip til neseklype
 
-Velge protokoll på Lode PC. Dersom personen ikke har erfaring med sykkel må man bli enige om en Watt man tror kan passe.
+9.  Velge protokoll på Lode PC. Dersom personen ikke har erfaring med sykkel må man bli enige om en Watt man tror kan passe.
 
-Forklare forsøksperson hva testen innebærer, opplyse om borg skala og hvor på skala man vil ha den.
+**Forklare forsøksperson hva testen innebærer, opplyse om borg skala og hvor på skala man vil ha den.**
 
-VO2max – Kondisjon
-
-Målinger per 30 sek.
-
-Prestasjonstest – hvert sekund teller
-
-Watt-økning per 1 min.
-
-80-100 rpm, stopper test hvis under 60
-
-Pulsmåling
-
-Borg skala – 6 = sofa, 20 = maks
-
-Laktatmåling 1 min etter test – stikk i fingeren
-
-Vifte?
+1.  VO2max – Kondisjon
+2.  Målinger per 30 sek.
+3.  Prestasjonstest – hvert sekund teller
+4.  Watt-økning per 1 min.
+5.  80-100 rpm, stopper test hvis under 60
+6.  Pulsmåling
+7.  Borg skala – 6 = sofa, 20 = maks
+8.  Laktatmåling 1 min etter test – stikk i fingeren
+9.  Vifte?
 
 ### Etter test:
 
-Avslutte test på begge PC
-
-Spørre om Borg skala
-
-1 minutt etter endt test skal det tas laktat-prøve. Tok 2 prøver for å sikre god reliabilitet.
+1.  Avslutte test på begge PC
+2.  Spørre om Borg skala
+3.  1 minutt etter endt test skal det tas laktat-prøve. Tok 2 prøver for å sikre god reliabilitet.
 
 **Hente rapport:**
 
-Rapport: INN_TABELL:30SEK_MIX
-
-Søke opp id-nr.
-
-Lagre i rett mappe: F10 (nederste knapp)
-
-Lagre i rett mappe på minnepenn
-
-Overføre til One Drive på labbPCn
+1.  Rapport: INN_TABELL:30SEK_MIX
+2.  Søke opp id-nr.
+3.  Lagre i rett mappe: F10 (nederste knapp)
+4.  Lagre i rett mappe på minnepenn
+5.  Overføre til One Drive på labbPCn
 
 # Standardisering:
 
@@ -266,7 +236,6 @@ dat %>%
     .groups = "drop")
 
 ```
-
 
 **RER**
 
